made chanes to form and fixed aligment (align-items:center) #form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,21 +101,21 @@ header a {
     box-shadow: 0 10px 30px 0 #cd39a14d;
     border-radius: 4px;
     color:#ffffff;
-    padding: 2px;
+    padding: 2.5px;
 }
 
-#wwd {
+#wwd{
    margin-right: 20px;   
 }
 
-#wwa {
+#wwa{
      margin-right: 20px;  
   }
 
-  #wwa {
+  #wwa{
      margin-right: 20px;  
   }
-  #git {
+  #git{
     margin-right: 20px;  
  }
 
@@ -171,7 +171,7 @@ main {
     flex-direction: column;
 }
  
-/* Hero section */
+/* ------------------------- Hero section -------------------- */
 #hero {
     height: 600px;
     width: 100%;
@@ -350,18 +350,17 @@ main {
     margin-top: 20px;
 }
 
-/* Form Section */
+/*--------- Form Section ---------------*/
 
 #form {
-    height: 400px;
-    margin-left: 100px; 
-    margin-right: 100px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
+    justify-content: center; 
     padding: 2rem;
-    padding-bottom: 0.5rem;
+    padding-bottom: 0.5rem; 
+    background-color: #420be6;
 }
 
 #form > form {
@@ -369,18 +368,18 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-width: 500px;
+   
 }
 
 .form_container {
     display: flex;
     flex-direction: column;
-    align-items: space-between;
+    align-items: center;
     justify-content: center;
 }
  
 #submit {
-   
+
   }
 
 
@@ -420,9 +419,15 @@ input[type=text], select {
 
   
   div #form {
-    border-radius: 15px;
+    border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+    max-width: 300px;
+    min-width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
   }
 
  
@@ -482,7 +487,7 @@ footer{
         column-count: 2;
         column-gap: 0;
     }
-}
+    
  
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 760px) {
